@@ -165,7 +165,14 @@ int main ( int argc, char *argv[] )
 #if QT_VERSION >= QT_VERSION_CHECK(5, 1, 0)
 	app.setApplicationName(QMIDICTL_TITLE);
 	app.setApplicationDisplayName(
-		QMIDICTL_TITLE " - " + QObject::tr(QMIDICTL_SUBTITLE));
+	QMIDICTL_TITLE " - " + QObject::tr(QMIDICTL_SUBTITLE));
+	QString sVersion(CONFIG_BUILD_VERSION);
+	sVersion += '\n';
+	sVersion += QString("Qt: %1").arg(qVersion());
+#if defined(QT_STATIC)
+	sVersion += "-static";
+#endif
+	QApplication::setApplicationVersion(sVersion);
 #endif
 
 	qmidictlOptions opt;
