@@ -1,7 +1,7 @@
 // qmidictlOptions.cpp
 //
 /****************************************************************************
-   Copyright (C) 2010-2020, rncbc aka Rui Nuno Capela. All rights reserved.
+   Copyright (C) 2010-2022, rncbc aka Rui Nuno Capela. All rights reserved.
 
    This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
@@ -23,6 +23,16 @@
 #include "qmidictlOptions.h"
 
 #include <QTextStream>
+
+#include <QApplication>
+
+#if QT_VERSION >= QT_VERSION_CHECK(5, 2, 0)
+#include <QCommandLineParser>
+#include <QCommandLineOption>
+#if defined(Q_OS_WINDOWS)
+#include <QMessageBox>
+#endif
+#endif
 
 
 //-------------------------------------------------------------------------
@@ -114,6 +124,20 @@ QSettings& qmidictlOptions::settings (void)
 }
 
 
+#if QT_VERSION >= QT_VERSION_CHECK(5, 2, 0)
+
+void qmidictlOptions::show_error( const QString& msg )
+{
+#if defined(Q_OS_WINDOWS)
+	QMessageBox::information(nullptr, QApplication::applicationName(), msg);
+#else
+	const QByteArray tmp = msg.toUtf8() + '\n';
+	::fputs(tmp.constData(), stderr);
+#endif
+}
+
+#else
+
 // Help about command line options.
 void qmidictlOptions::print_usage ( const QString& arg0 )
 {
@@ -121,35 +145,96 @@ void qmidictlOptions::print_usage ( const QString& arg0 )
 	const QString sEot = "\n\t";
 	const QString sEol = "\n\n";
 
-	out << QMIDICTL_TITLE " - " << QObject::tr(QMIDICTL_SUBTITLE) + sEol;
 	out << QObject::tr("Usage: %1 [options]").arg(arg0) + sEol;
+	out << QMIDICTL_TITLE " - " << QObject::tr(QMIDICTL_SUBTITLE) + sEol;
 	out << QObject::tr("Options:") + sEol;
 #if !defined(Q_OS_SYMBIAN) && !defined(Q_OS_WINDOWS)
-    out << "  -i, --interface=[interface]" + sEot +
+	out << "  -i, --interface=[interface]" + sEot +
 		QObject::tr("Use specific network interface (default = %1)")
 			.arg(sInterface.isEmpty() ? "all" : sInterface) + sEol;
 #endif
-	out << "  -u, --address, --udp-addr=[address]" + sEot +
+	out << "  -u, --udp-addr=[addr]" + sEot +
 		QObject::tr("Use specific network address (default = %1)")
 			.arg(sUdpAddr) + sEol;
-	out << "  -p, --port, --udp-port=[port]" + sEot +
+	out << "  -p, --udp-port=[port]" + sEot +
 		QObject::tr("Use specific network port (default = %1)")
 			.arg(iUdpPort) + sEol;
-	out << "  -m, --mmc-device=[mmc-device]" + sEot +
+	out << "  -m, --mmc-device=[num]" + sEot +
 		QObject::tr("Use specific MMC device number (default = %1)")
 			.arg(iMmcDevice) + sEol;
 	out << "  -h, --help" + sEot +
-		QObject::tr("Show help about command line options") + sEol;
+		QObject::tr("Show help about command line options.") + sEol;
 	out << "  -v, --version" + sEot +
-		QObject::tr("Show version information") + sEol;
+		QObject::tr("Show version information.") + sEol;
 }
+
+#endif
 
 
 // Parse command line arguments into m_settings.
 bool qmidictlOptions::parse_args ( const QStringList& args )
 {
+#if QT_VERSION >= QT_VERSION_CHECK(5, 2, 0)
+
+	QCommandLineParser parser;
+	parser.setApplicationDescription(
+		QMIDICTL_TITLE " - " + QObject::tr(QMIDICTL_SUBTITLE));
+
+#if !defined(Q_OS_SYMBIAN) && !defined(Q_OS_WINDOWS)
+	parser.addOption({{"i", "interface"},
+		QObject::tr("Use specific network interface (default = %1)")
+			.arg(sInterface.isEmpty() ? "all" : sInterface), "name"});
+#endif
+	parser.addOption({{"u", "udp-addr"},
+		QObject::tr("Use specific network address (default = %1)")
+			.arg(sUdpAddr), "addr"});
+	parser.addOption({{"p", "udp-port"},
+		QObject::tr("Use specific network port (default = %1)")
+			.arg(iUdpPort), "port"});
+	parser.addOption({{"m", "mmc-device"},
+		QObject::tr("Use specific MMC device number (default = %1)")
+			.arg(iMmcDevice), "num"});
+	parser.addHelpOption();
+	parser.addVersionOption();
+	parser.process(args);
+
+#if !defined(Q_OS_SYMBIAN) && !defined(Q_OS_WINDOWS)
+	if (parser.isSet("interface")) {
+		sInterface = parser.value("interface"); // Maybe empty!
+	}
+#endif
+	if (parser.isSet("udp-addr")) {
+		const QString& sVal = parser.value("udp-addr");
+		if (sVal.isEmpty()) {
+			show_error(QObject::tr("Option -u requires an argument (addr)."));
+			return false;
+		}
+		sUdpAddr = sVal;
+	}
+
+	if (parser.isSet("udp-port")) {
+		bool bOK = false;
+		const int iVal = parser.value("udp-port").toInt(&bOK);
+		if (!bOK) {
+			show_error(QObject::tr("Option -p requires an argument (port)."));
+			return false;
+		}
+		iUdpPort = iVal;
+	}
+
+	if (parser.isSet("mmc-device")) {
+		bool bOK = false;
+		const int iVal = parser.value("mmc-device").toInt(&bOK);
+		if (!bOK) {
+			show_error(QObject::tr("Option -m requires an argument (num)."));
+			return false;
+		}
+		iMmcDevice = iVal;
+	}
+
+#else
+
 	QTextStream out(stderr);
-	const QString sEot = "\n\t";
 	const QString sEol = "\n\n";
 	const int argc = args.count();
 
@@ -176,16 +261,16 @@ bool qmidictlOptions::parse_args ( const QStringList& args )
 		}
 		else
 	#endif
-		if (sArg == "-u" || sArg == "--address" || sArg == "--udp-addr") {
+		if (sArg == "-u" || sArg == sArg == "--udp-addr") {
 			if (sVal.isEmpty()) {
-				out << QObject::tr("Option -d requires an argument (address).") + sEol;
+				out << QObject::tr("Option -u requires an argument (addr).") + sEol;
 				return false;
 			}
 			sUdpAddr = sVal;
 			if (iEqual < 0) ++i;
 		}
 		else
-		if (sArg == "-p" || sArg == "--port" || sArg == "--udp-port") {
+		if (sArg == "-p" || sArg == "--udp-port") {
 			if (sVal.isEmpty()) {
 				out << QObject::tr("Option -p requires an argument (port).") + sEol;
 				return false;
@@ -196,7 +281,7 @@ bool qmidictlOptions::parse_args ( const QStringList& args )
 		else
 		if (sArg == "-m" || sArg == "--mmc-device") {
 			if (sVal.isEmpty()) {
-				out << QObject::tr("Option -m requires an argument (mmc-device).") + sEol;
+				out << QObject::tr("Option -m requires an argument (num).") + sEol;
 				return false;
 			}
 			iMmcDevice = sVal.toInt();
@@ -220,6 +305,8 @@ bool qmidictlOptions::parse_args ( const QStringList& args )
 			return false;
 		}
 	}
+
+#endif
 
 	// Alright with argument parsing.
 	return true;
